[#6]refactor(feed):refactor visit/place package(#31)